# glyph

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  lexer.md  package.json  plan.md  todo.md  tsconfig.json
examples/: diagnostics_tester.rs  full_compliance_test.rs  main_tester.rs  protocol_tester.rs
messages/: de.json  en.json  es.json
pkg/: glyph_bg.wasm
project.inlang/: project_id  settings.json
src/: analysis.rs  app.css  app.html  ast.rs  lex.rs  lib.rs  main.rs  parse.rs
src/lib/: index.ts  test.ts  wasm.ts
src/lib/assets/: attributions.md
src/lib/components/: AnalysisPanel.svelte  CodeEditor.svelte  ErrorBanner.svelte  FileInput.svelte  Header.svelte  LandingPage.svelte  LanguageSelector.svelte  ParserView.svelte  ThemeSelector.svelte
src/lib/pkg/: glyph.d.ts  glyph.js  glyph_bg.wasm  glyph_bg.wasm.d.ts
src/lib/stores/: glyphStore.svelte.ts
src/lib/types/: analysisTypes.ts  tokenTypes.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/semantics/: diagnostics.rs  encoder.rs  mod.rs  validator.rs
src/syntax/: lexer.rs  parser.rs  tokens.rs
src/tokens/: constant.rs  instruction.rs  mod.rs  pseudoinstruction.rs  punctuation.rs  register.rs  symbol.rs
static/: attributions.md
static/x8086/: d-svelte.md  flags.md  flake.nix  plantilla.asm  test.asm  test_astonishing.asm  x86.md
static/x8086/nams/01-data/: 00-sizes.com
static/x8086/nams/comp/: conversor-masm.asm
