[package]
name = "glyph"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# * COMPILE OPTIMIZATION ------------------------------------------------------------------------
[profile.dev]
opt-level = 0  # no optimizations (fastest compile time, slowest runtime)

[profile.dev.package."*"]
opt-level = 3  # Optimize the dependencies at the highest level

# * Use it only during building to allow maximum optimizations on release builds
# Release Profile for optimized, smaller binaries
# These settings make the final executable faster and smaller
[profile.release]
opt-level = 3       # Enable full optimizations.
lto = true          # Enable Link-Time Optimization for a smaller/faster binary.
codegen-units = 1   # Compile everything in one unit for max optimization (slower compile time).
strip = true

[dependencies]
# logic_tracer = "0.0.14"
chumsky = "0.11.2" # parser
wasm-bindgen = { version = "0.2.105", features = ["serde-serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
